tweaks from Benjamin

--- a/source/resume.haml
+++ b/source/resume.haml
@@ -15,7 +15,7 @@
       .target-dot
     %h2.item-company-title Split It Inc.
     %span.item-personal-title Web Developer
-    %span.item-date May 2013 - current
+    %div.item-date May 2013 - current
     %p.item-company-details
       Build and maintain platforms selling household utilities and financial services
     %ul.item-personal-details
@@ -31,7 +31,7 @@
       .target-dot
     %h2.item-company-title AVOS Systems, Inc
     %span.item-personal-title Backend Web Developer
-    %span.item-date Nov 2011 - May 2013
+    %div.item-date Nov 2011 - May 2013
     %p.item-company-details
       Explore new ways to interact with media
     %ul.item-personal-details
@@ -44,7 +44,7 @@
       .target-dot
     %h2.item-company-title Synactive
     %span.item-personal-title Software Engineer Intern
-    %span.item-date July - Oct 2011
+    %div.item-date July - Oct 2011
     %p.item-company-details
       Create products to enhance SAP users’ experience
     %ul.item-personal-details
@@ -56,7 +56,7 @@
       .target-dot
     %h2.item-company-title Zepheira
     %span.item-personal-title Web Developer Intern
-    %span.item-date May - July 2010
+    %div.item-date May - July 2010
     %p.item-company-details
       Analyze linked data from the Semantic Web
     %ul.item-personal-details
@@ -68,7 +68,7 @@
       .target-dot
     %h2.item-company-title UMW Summer Science Institute
     %span.item-personal-title Research Assistant
-    %span.item-date May - July 2009
+    %div.item-date May - July 2009
     %p.item-company-details Undergraduate research program
     %ul.item-personal-details
       %li Served as professor’s researcher on data visualization initiative
@@ -82,7 +82,7 @@
       .target-dot
     %h2.item-company-title Women Who Code
     %span.item-personal-title Organiser, Member
-    %span.item-date April 2014 - current
+    %div.item-date April 2014 - current
     %ul.item-personal-details
       %li Planned future events to help women learn new technologies
       %li Gave an introductory talk on using Ruby without Rails
@@ -93,7 +93,7 @@
       .target-dot
     %h2.item-company-title Rails Girls
     %span.item-personal-title Organiser, Mentor
-    %span.item-date July 2013 - current
+    %div.item-date July 2013 - current
     %p.item-company-details Introducing women to programming and Ruby on Rails
     %ul.item-personal-details
       %li Started Rails Girls Next, and organised its first workshop (#{link_to 'lbain.github.io/rails-girls-next', 'http://lbain.github.io/rails-girls-next'})
@@ -106,7 +106,7 @@
       .target-dot
     %h2.item-company-title Study groups
     %span.item-personal-title Organiser, Mentor
-    %span.item-date February - June 2014 <br/> August - Oct 2014
+    %div.item-date February - June 2014 <br/> August - Oct 2014
     %ul.item-personal-details
       %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
       %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com', 'http://www.codesydney.com'})
@@ -118,7 +118,7 @@
       .target-dot
     %h2.item-company-title She Hacks
     %span.item-personal-title Developer
-    %span.item-date March 2014
+    %div.item-date March 2014
     %p.item-company-details All women hackathon
     %ul.item-personal-details
       %li Lead the technical members in creating a Rails site in 2 days
@@ -129,7 +129,7 @@
       .target-dot
     %h2.item-company-title Startup Weekend Dunedin
     %span.item-personal-title Backend Web Developer
-    %span.item-date March 2013
+    %div.item-date March 2013
     %ul.item-personal-details
       %li Won 2nd place for our project, Travelscoop, which matched locals with travelers to share local information and give suggestions what to do
       %li Worked with a team to plan, organise, build, and present a startup idea in 54 hours
@@ -142,7 +142,7 @@
       .target-dot
     %h2.item-company-title University of Mary Washington
     %span.item-personal-title BSc Comp Sci, Honors
-    %span.item-date Aug 2007 - May 2011
+    %div.item-date Aug 2007 - May 2011
     %p For my honors project:
     %ul.item-personal-details
       %li Researched and improved knowledge search for scholarly articles with a team
