--- a/source/stylesheets/header.sass
+++ b/source/stylesheets/header.sass
@@ -28,6 +28,7 @@
     @include respond(medium)
       padding: 20px 10px
     li
+      font-size: 0.9em
       display: inline
       @include respond(medium)
         font-size: 18px
