--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,7 +8,7 @@
 
     %link{href: "http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700", rel: "stylesheet", type: "text/css"}
     %title= current_page.data.title || "Lucy Bain"
-    = stylesheet_link_tag "application"
+    = stylesheet_link_tag "application", media: "all"
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"}
   %body{class: page_classes}
     = partial "layouts/shared/header"
