update link to resume

--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -8,7 +8,7 @@
     %li
       =nav_link 'Connect with me', '/'
     %li
-      =nav_link 'My job', '/job/'
+      =nav_link 'Resume', '/resume/'
     %li
       =nav_link 'Resources', '/resources/'
     %li
