--- a/source/resources/udacity-python-study-group.haml
+++ b/source/resources/udacity-python-study-group.haml
@@ -2,6 +2,10 @@
 summary: "I'd like to start a study group for the Udacity Programming 101 course."
 ---
 
+%h1 This study group is closed!
+
+%p I'm leaving this here for future reference, but this study group has finished and is not accpeting new applicants.
+
 %h1
   Udacity Python Study Group
 %p
@@ -60,6 +64,4 @@ summary: "I'd like to start a study group for the Udacity Programming 101 course
 %p
   If more than 12 are interested I'll send out an email letting you know who has been selected. Again, this is a space issue, nothing personal.
 
-:plain
-  <iframe src="https://docs.google.com/forms/d/1fq0VDEJ8isgoQPR3EaR3Dpji9fdktBAOFU3r2Cu4d4s/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0" style="
-    margin-left: 10px;">Loading...</iframe>
+%h1 Again, this study group has closed!
