--- a/source/stylesheets/header.sass
+++ b/source/stylesheets/header.sass
@@ -37,9 +37,12 @@
       a
         font-weight: $bold
         color: $white
-        padding: 24px 20px 22px
+        padding: 10px 10px 10px
+        border-radius: 5px
+        margin-right: 15px
         @include respond(medium)
-          padding: 24px 10px 22px
+          padding: 10px 10px 10px
+          margin-right: 5px
         &:hover
           text-decoration: none
           background-color: $dark-accent
