--- a/source/stylesheets/variables.sass
+++ b/source/stylesheets/variables.sass
@@ -1,4 +1,4 @@
-$small-size: 410px
+$small-size: 415px
 $medium-size: 900px
 $medium-large-size: 1150px
 $large-size: 1200px
@@ -10,6 +10,7 @@ $accent: #C93C67
 $light-accent: lighten($accent, 40)
 $very-light-accent: #f9ebef
 $dark-accent: darken($accent, 5)
+$very-dark-accent: #960934
 
 $bold: 700
 $normal-weight: 400
