--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -10,7 +10,7 @@
     %title= current_page.data.title || "Lucy Bain"
     = stylesheet_link_tag "application", media: "all"
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"}
-  %body{class: page_classes}
+  %body{class: current_page.data.page_class}
     = partial "layouts/shared/header"
     .content
       = yield
