--- a/source/layouts/shared/_header.haml
+++ b/source/layouts/shared/_header.haml
@@ -6,13 +6,15 @@
       %li
   %ul.nav
     %li
-      =nav_link 'Connect with me', '/'
+      =nav_link 'Me', '/', class: 'nav-link'
     %li
-      =nav_link 'Resume', '/resume/'
+      =nav_link 'Resume', '/resume/', class: 'nav-link'
     %li
-      =nav_link 'Resources', '/resources/'
+      =nav_link 'Contact', '/contact-me/', class: 'nav-link'
     %li
-      =nav_link 'Blog', '/blog/'
+      =nav_link 'Resources', '/resources/', class: 'nav-link'
+    %li
+      =nav_link 'Blog', '/blog/', class: 'nav-link'
 
 :javascript
   $('#menu .nav-open-btn').on('click', function(){
