--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,29 +1,40 @@
 @import variables
 
+.home-page
+  background: $accent
+  color: $white
+  a
+    color: $white
+
+.social-logo
+  width: 48px
+  margin: 15px
+
 .personal-info
-  margin: 60px auto 0px auto
+  margin: 20px auto 0px auto
   text-align: center
+
+  .blurb
+    font-size: 2.5em
+    line-height: 1.15em
+    font-weight: $bold
 
   .photo
     margin: 0px auto 20px
 
   .profile-pic
-    width: 300px
+    width: 230px
     border-radius: 100%
 
   .connections
-    padding: 0px
+    margin-top: 80px
     li
       display: inline
-      margin-right: 15px
+      margin-right: 30px
+    a
+      color: $very-dark-accent
+      font-size: 3em
+      &:hover
+        color: $white
+        text-decoration: none
 
-
-@include respond(medium)
-  .personal-info
-    margin: 60px auto 0px auto
-    .profile-pic
-      width: 250px
-    .connections
-      li
-        display: block
-        margin: 15px 0px 0px 0px
