Small changes for the mobile menu and home page

--- a/source/stylesheets/header.sass
+++ b/source/stylesheets/header.sass
@@ -72,10 +72,10 @@
           padding: 10px 20px 10px
           &:hover
             text-decoration: none
-            background-color: $accent
+            background-color: $dark-accent
             border: none
   .nav.open
-    height: 190px
+    height: 250px
 
 
 
