--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -28,9 +28,12 @@
 
   .connections
     margin-top: 80px
+    padding-left: 0px
     li
       display: inline
       margin-right: 30px
+      &:last-child
+        margin-right: 0px
     a
       color: $very-dark-accent
       font-size: 3em
