--- a/source/resume.haml
+++ b/source/resume.haml
@@ -1,3 +1,6 @@
+---
+page_class: 'resume'
+---
 %section.category.overview
   .category-title OVERVIEW
   .item
@@ -50,6 +53,8 @@
     %ul.item-personal-details
       %li Built new features for our next release and saw them through QA
       %li Developed a prototype iPhone application to transfer data asynchronously using Objective-C, and process that data with the company's C++ library
+
+  .page-break
 
   .item
     .target-border
@@ -112,6 +117,8 @@
       %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com', 'http://www.codesydney.com'})
       %li Arranged for mentors from the community to answer questions
       %li Implemented an incentive based payment system to encourage members to attend
+
+  .page-break
 
   .item
     .target-border
