A few more tweaks

--- a/source/resume.haml
+++ b/source/resume.haml
@@ -1,12 +1,13 @@
 ---
 page_class: 'resume'
 ---
+.personal-details
+  %h1 Lucy Bain
+  %p #{link_to 'lucybain.com', 'http://lucybain.com'}
+
 %section.category.overview
   .category-title OVERVIEW
   .item
-    .target-border
-      .target-dot
-    %h2.item-company-title Lucy Bain
     %p
       I love learning a concept and understanding how it fits together in the larger picture. To gain a better view of the full stack I'm moving away from back end development and focusing on front end challenges. I'm interested in writing what the user interacts with and making sure they have an wonderful experience. I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.
 
