--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -62,6 +62,8 @@ li
   .page-break
     display: block
     page-break-before: always
+  a
+    text-decoration: underline
 
 #main
   margin: 0 auto
