--- a/source/stylesheets/resume.sass
+++ b/source/stylesheets/resume.sass
@@ -6,6 +6,14 @@ $community-color: #21b080
 $education-color: #500e4e
 $technical-color: #f78a4f
 
+.personal-details
+  display: none
+  margin-bottom: 30px
+  ul
+    padding-left: 0px
+  li
+    list-style-type: none
+
 .category
   position: relative
   margin-top: 1.5em
@@ -91,6 +99,11 @@ $technical-color: #f78a4f
   margin-top: 0px
   padding-left: 1em
 
+.overview
+  .item
+    padding-left: 0px
+    margin-left: -20px
+
 @mixin category_colors($color)
   .category-title
     background-color: $color
@@ -120,6 +133,11 @@ $technical-color: #f78a4f
 
 @media print
   .resume
+    h1
+      margin-top: 0px
+      margin-bottom: 5px
+    .personal-details
+      display: block
     #menu
       display: none
     .content
@@ -140,5 +158,10 @@ $technical-color: #f78a4f
       height: 10px
     .target-dot
       display: none
+    .overview .item-company-title
+      display: none
     li, p
       margin-bottom: 0.2em
+    .overview .item
+      padding-left: 0px
+      margin-left: 0px
