Update links to codesydney

--- a/source/resources/index.haml
+++ b/source/resources/index.haml
@@ -1,4 +1,4 @@
-%h2=link_to 'JS and jQuery Study group', 'http://codesydney.com/'
+%h2=link_to 'JS and jQuery Study group', 'http://www.codesydney.com/2014-js/'
 %p Link to my study group for the Odin Project's JS course
 %h2=link_to 'JS and jQuery code', '/code-sydney-work'
 %p Directions, demos, and code solutions for the JS study group homework
