--- a/source/resume.haml
+++ b/source/resume.haml
@@ -115,7 +115,7 @@ page_class: 'resume'
     %div.item-date February - June 2014 <br/> August - Oct 2014
     %ul.item-personal-details
       %li Lead an introduction to programming course in Python (#{link_to 'lucybain.com/python', '/python'})
-      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com', 'http://www.codesydney.com'})
+      %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
       %li Arranged for mentors from the community to answer questions
       %li Implemented an incentive based payment system to encourage members to attend
 
