update home page now I have a job!

--- a/source/index.haml
+++ b/source/index.haml
@@ -10,7 +10,7 @@ page_class: home-page
   .photo
     = image_tag 'profile_pic.jpg', class: 'profile-pic', alt: 'Lucy Bain'
   .blurb
-    Hello, I'm Lucy!<br/> I'm a developer looking for a new front-end role.
+    Hello, I'm Lucy!
   %ul.connections
     %li
       =link_to '', 'https://twitter.com/lucykbain', alt: 'Twitter', class: 'icon-twitter', target: '_blank'
