--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -13,6 +13,14 @@
 .personal-info
   margin: 20px auto 0px auto
   text-align: center
+  max-width: 350px
+  height: 420px
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  margin: auto
 
   .blurb
     font-size: 2.5em
