Update resume with atlassian info

--- a/source/resume.haml
+++ b/source/resume.haml
@@ -17,9 +17,21 @@ page_class: 'resume'
   .item
     .target-border
       .target-dot
+    %h2.item-company-title Atlassian
+    %span.item-personal-title Developer
+    %div.item-date Feb 2015 - current
+    %p.item-company-details
+      Create software that helps teams plan, collaborate, and code.
+    %ul.item-personal-details
+      %li Focused on front end skills, particularly Less and JS
+      %li Introduced pair programming as a regular part of team culture
+
+  .item
+    .target-border
+      .target-dot
     %h2.item-company-title Split It Inc.
     %span.item-personal-title Web Developer
-    %div.item-date May 2013 - current
+    %div.item-date May 2013 - Feb 2015
     %p.item-company-details
       Build and maintain platforms selling household utilities and financial services
     %ul.item-personal-details
@@ -43,6 +55,8 @@ page_class: 'resume'
       %li Worked with team members to solve technical problems
       %li Tested and deployed code to our production environment
 
+  .page-break
+
   .item
     .target-border
       .target-dot
@@ -54,8 +68,6 @@ page_class: 'resume'
     %ul.item-personal-details
       %li Built new features for our next release and saw them through QA
       %li Developed a prototype iPhone application to transfer data asynchronously using Objective-C, and process that data with the company's C++ library
-
-  .page-break
 
   .item
     .target-border
@@ -107,6 +119,8 @@ page_class: 'resume'
       %li Answered questions about the Rails stack
       %li Debugged code when the participants ran into difficulties
 
+  .page-break
+
   .item
     .target-border
       .target-dot
@@ -118,8 +132,6 @@ page_class: 'resume'
       %li Facilitated a group to practice JavaScript that attracted 40 registrations (#{link_to 'codesydney.com/2014-js', 'http://www.codesydney.com/2014-js/'})
       %li Arranged for mentors from the community to answer questions
       %li Implemented an incentive based payment system to encourage members to attend
-
-  .page-break
 
   .item
     .target-border
