--- a/source/blog/2014/02-13-udacity-study-group.haml
+++ b/source/blog/2014/02-13-udacity-study-group.haml
@@ -1,9 +1,9 @@
 ---
 title: Starting a CS Study Group!
-tags: udaicty, study group
+tags: udacity, study group
 ---
 %p
-  I've wanted to run a programming study group for quite a while. Although I love what #{link_to 'Rails Girls', 'http://railsgirls.com/'} and #{link_to 'InstallFest', 'http://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/'} do, I think attendees find it quite hard to continue learning. They have some support from the community through initiatives like DevHub to continue working on projects and learning about Ruby and Rails. But there isn't a clear path for them to go down - #{link_to 'books?', 'http://blog.mediumequalsmessage.com/6-best-learning-ruby-books'} which ones? #{link_to 'videos?', 'http://stackoverflow.com/questions/5732119/ruby-video-tutorials'} by whom? #{link_to 'personal project?', 'https://www.learnstreet.com/cg/simple/projects/ruby'} what kind? I'd find #{link_to 'all the options', 'http://iwanttolearnruby.com/'} overwhelming. Even once you get started, there will always be many, many bumps along the road and going to DevHub once a month won't be enough to get over all of them.
+  I've wanted to run a programming study group for quite a while. Although I love what #{link_to 'Rails Girls', 'http://railsgirls.com/'} and #{link_to 'InstallFest', 'http://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/'} do, I think attendees find it quite hard to continue learning. They have some support from the community through initiatives like DevHub to continue working on projects and learning about Ruby and Rails. But there isn't a clear path for them to go down - #{link_to 'books?', 'http://blog.mediumequalsmessage.com/6-best-learning-ruby-books'} which ones? #{link_to 'videos?', 'http://stackoverflow.com/questions/5732119/ruby-video-tutorials'} by whom? #{link_to 'personal project?', 'http://www.quora.com/What-are-some-good-beginner-programming-projects'} what kind? I'd find #{link_to 'all the options', 'http://iwanttolearnruby.com/'} overwhelming. Even once you get started, there will always be many, many bumps along the road and going to DevHub once a month won't be enough to get over all of them.
 
 %p
   So after thinking about it a lot, I decided to run my own study group. I want something with:
