--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -2,16 +2,22 @@
 no_comments: true
 pageable: true
 ---
-- if paginate && num_pages > 1
-  - if prev_page
-    %p= link_to 'Previous page', prev_page
-- page_articles.each_with_index do |article, i|
-  %h2
-    = link_to article.title, article
-  %p= article.date.strftime('%b %e, %Y')
-  = article.summary(250)
-- if paginate
-  - if next_page
-    %p
-      Page #{page_number} of #{num_pages}
-    %p= link_to 'Next page', next_page
+
+.blog-listing
+  - if paginate && num_pages > 1
+    - if prev_page
+      %p= link_to 'Previous page', prev_page
+
+  - page_articles.each_with_index do |article, i|
+    %div
+      %h2
+        = link_to article.title, article
+      %p= article.date.strftime('%b %e, %Y')
+      = article.summary(250)
+    %hr
+
+  - if paginate
+    - if next_page
+      %p
+        Page #{page_number} of #{num_pages}
+      %p= link_to 'Next page', next_page
