--- a/source/stylesheets/blog.sass
+++ b/source/stylesheets/blog.sass
@@ -4,3 +4,11 @@
   border-top: 2px solid
   border-color: #eaedee
   border-color: rgba(0,39,59,.08)
+
+.blog-listing
+  hr
+    width: 20%
+    border: none
+    height: 1px
+    background-color: rgba(0, 0, 0, 0.2)
+    margin: 4em auto
