--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,7 +1,7 @@
 @import variables
 
 .home-page
-  background: $accent
+  background: darken($accent, 5)
   color: $white
   a
     color: $white
@@ -11,16 +11,9 @@
   margin: 15px
 
 .personal-info
-  margin: 20px auto 0px auto
-  text-align: center
+  margin: 60px auto
   max-width: 350px
-  height: 420px
-  position: absolute
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-  margin: auto
+  text-align: center
 
   .blurb
     font-size: 2.5em
