--- a/source/layouts/blog.haml
+++ b/source/layouts/blog.haml
@@ -1,5 +1,5 @@
 - wrap_layout :layout do
-  %div{class: current_page.data.page_class || ''}
+  %div{class: (current_page.data.page_class || '') + ' blog-listing'}
     %h1= current_page.data.title
 
     - if current_page.methods.include?(:tags) && current_page.tags.count > 0
@@ -9,6 +9,7 @@
       = yield
 
     - unless current_page.data.no_comments
+      %hr
       #disqus_thread
       :javascript
         var disqus_shortname = 'lucybain';
@@ -31,17 +32,3 @@
             s.src = '//' + disqus_shortname + '.disqus.com/count.js';
             (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
         }());
-
-    - if false
-      %aside
-        %h4 Recent Articles
-        %ol
-          - blog.articles[0...10].each do |article|
-            %li
-              = link_to article.title, article
-              %span= article.date.strftime('%b %e')
-
-        %h4 By Year
-        %ol
-          - blog.articles.group_by {|a| a.date.year }.each do |year, articles|
-            %li= link_to "#{year} (#{articles.size})", blog_year_path(year)
