--- a/source/stylesheets/_responsive.sass
+++ b/source/stylesheets/_responsive.sass
@@ -2,7 +2,7 @@
   body
     font-size: 18px
 
-  #menu .nav
+  nav .nav-display
     padding: 20px 10px
 
     li a
@@ -10,14 +10,14 @@
       margin-right: 5px
 
 @include respond(small)
-  #menu
+  nav
     padding: 30px
     width: 100%
 
     .nav-open-btn
       display: block
 
-    ul.nav
+    .nav-display
       height: 0
       padding: 0
       overflow: hidden
