--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -1,13 +1,13 @@
 body
   background: $white
-  font-family: $title-font
+  font-family: $content-font
   color: $dark-gray
   font-size: 20px
+  -webkit-font-smoothing:  antialiased
 
 a
   text-decoration: none
   color: $accent
-  -webkit-font-smoothing: antialiased
   text-decoration: none
   &:hover
     text-decoration: underline
