--- a/source/stylesheets/_content.sass
+++ b/source/stylesheets/_content.sass
@@ -1,30 +1,11 @@
 .content
-  margin: 0px auto
+  margin: 0 auto
   max-width: 700px
   padding: 20px 40px
-  font-size: 1em
-  line-height: 1em
-  font-family: $content-font
-  -webkit-font-smoothing:  antialiased
-
-  @include respond(medium)
-    font-size: 18px
-    padding: 20px 40px
-  @include respond(small)
-    padding: 20px
-    font-size: 16px
 
   .center
     text-align: center
 
-  .timeline-post #disqus_thread
-    margin-top: 700px
-
-  .timeline
-    position: absolute
-    left: 0
-    right: 0
-
 .thanks-kitten
-  margin: 20px auto
   display: block
+  margin: 20px auto
