rename header to nav part 2

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -47,7 +47,7 @@ $large-screen:  generate_media_query($large-size)
       @content
 
 @import base
-@import header
+@import nav
 @import home
 @import content
 @import resume
