change 0px to 0 on all the things!

--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -23,7 +23,7 @@ h1, h2, h3, h4
   font-family: $title-font
   font-weight: $normal-weight
   line-height: 1.25em
-  margin: 40px 0px 20px
+  margin: 40px 0 20px
 
 h1
   font-size: 2.5em
@@ -35,11 +35,11 @@ h2
 
 h3
   font-size: 1em
-  margin: 20px 0px 0px
+  margin: 20px 0 0
 
 h1, h2, h3
   @include respond(small)
-    margin: 20px 0px 0px
+    margin: 20px 0 0
 
 ul
   padding-left: 40px
@@ -67,4 +67,4 @@ li
   @include respond(medium)
     margin: 20px
   @include respond(small)
-    margin: 0px
+    margin: 0
