--- a/source/stylesheets/_js-demos.sass
+++ b/source/stylesheets/_js-demos.sass
@@ -77,7 +77,7 @@
   position: absolute
   top: 50%
   left: 50%
-  margin: -59px 0px 0px -62px
+  margin: -59px 0 0 -62px
 
 .link
   display: block
@@ -85,8 +85,8 @@
   text-align: center
   font-size: 0.7em
   font-weight: bold
-  padding: 6px 0px 2px 0px
-  margin: 10px 0px
+  padding: 6px 0 2px 0
+  margin: 10px 0
   width: 120px
   border-radius: 3px
   color: $dark-gray
