--- a/source/stylesheets/_normalize.sass
+++ b/source/stylesheets/_normalize.sass
@@ -1,5 +1,5 @@
 p, h1, h2, h3, h4
-  margin: 0px
+  margin: 0
 
 ul
   li
@@ -359,4 +359,4 @@ table
  * ==========================================================================
 
 ul
-  padding: 0px
+  padding: 0
