--- a/source/stylesheets/_resume.sass
+++ b/source/stylesheets/_resume.sass
@@ -8,7 +8,7 @@ $technical-color: #f78a4f
   display: none
   margin-bottom: 30px
   ul
-    padding-left: 0px
+    padding-left: 0
   li
     list-style-type: none
 
@@ -25,10 +25,10 @@ $technical-color: #f78a4f
   color: white
   position: relative
   left: -20px
-  top: 0px
+  top: 0
   font-weight: $bold
   @include respond(small)
-    left: 0px
+    left: 0
 
 .item
   border-left: 5px solid
@@ -42,7 +42,7 @@ $technical-color: #f78a4f
     margin-left: 5px
   @include respond(small)
     border: none
-    padding-left: 0px
+    padding-left: 0
 
 .target-border
   position: absolute
@@ -66,7 +66,7 @@ $technical-color: #f78a4f
 
 .item-company-title
   display: inline-block
-  margin-top: 0px
+  margin-top: 0
   @include respond(medium-large)
     margin-bottom: 5px
 
@@ -89,17 +89,17 @@ $technical-color: #f78a4f
   margin-left: 15px
   color: $light-gray
   @include respond(medium-large)
-    margin-left: 0px
+    margin-left: 0
     margin-bottom: 5px
     display: block
 
 .item-personal-details
-  margin-top: 0px
+  margin-top: 0
   padding-left: 1em
 
 .overview
   .item
-    padding-left: 0px
+    padding-left: 0
     margin-left: -20px
 
 @mixin category_colors($color)
@@ -132,7 +132,7 @@ $technical-color: #f78a4f
 @media print
   .resume
     h1
-      margin-top: 0px
+      margin-top: 0
       margin-bottom: 5px
     .personal-details
       display: block
@@ -161,5 +161,5 @@ $technical-color: #f78a4f
     li, p
       margin-bottom: 0.2em
     .overview .item
-      padding-left: 0px
-      margin-left: 0px
+      padding-left: 0
+      margin-left: 0
