updates to home.sass

--- a/source/stylesheets/_home.sass
+++ b/source/stylesheets/_home.sass
@@ -1,12 +1,9 @@
 .home-page
   background: darken($accent, 5)
   color: $white
+
   a
     color: $white
-
-.social-logo
-  width: 48px
-  margin: 15px
 
 .personal-info
   margin: 60px auto
@@ -15,27 +12,31 @@
 
   .blurb
     font-size: 2.5em
-    line-height: 1.15em
     font-weight: $bold
+    line-height: 1.15em
 
   .photo
-    margin: 0px auto 20px
+    margin: 0 auto 20px
 
   .profile-pic
-    width: 230px
     border-radius: 100%
+    width: 230px
 
   .connections
     margin-top: 80px
-    padding-left: 0px
+    padding-left: 0
+
     li
       display: inline
-      margin-right: 30px
+      margin-right: 40px
+
       &:last-child
-        margin-right: 0px
+        margin-right: 0
+
     a
       color: $very-dark-accent
-      font-size: 3em
+      font-size: 2em
+
       &:hover
         color: $white
         text-decoration: none
