--- a/source/stylesheets/_js-demos.sass
+++ b/source/stylesheets/_js-demos.sass
@@ -1,98 +1,96 @@
 #all-projects
-  position: absolute
-  left: 0
-  right: 0
-  padding: 20px
-  margin: 0 auto
   font-family: $title-font
+  left: 0
+  margin: 0 auto
+  padding: 20px
+  position: absolute
+  right: 0
+
   div
     box-sizing: border-box
 
-#backbone-demo
-  background-image: url('/images/demos/backbone.svg')
-#calculator-demo
-  background-image: url('/images/demos/calculator.svg')
-#form-validation-demo
-  background-image: url('/images/demos/form-validation.svg')
-#google-maps-demo
-  background-image: url('/images/demos/google-maps.svg')
-#minesweeper-demo
-  background-image: url('/images/demos/minesweeper.svg')
-#missile-command-demo
-  background-image: url('/images/demos/missile-command.svg')
-#snake-demo
-  background-image: url('/images/demos/snake.svg')
-#tabs-demo
-  background-image: url('/images/demos/tabs.svg')
-#tic-tac-toe-demo
-  background-image: url('/images/demos/tic-tac-toe.svg')
+  #backbone-demo
+    background-image: url('/images/demos/backbone.svg')
+  #calculator-demo
+    background-image: url('/images/demos/calculator.svg')
+  #form-validation-demo
+    background-image: url('/images/demos/form-validation.svg')
+  #google-maps-demo
+    background-image: url('/images/demos/google-maps.svg')
+  #minesweeper-demo
+    background-image: url('/images/demos/minesweeper.svg')
+  #missile-command-demo
+    background-image: url('/images/demos/missile-command.svg')
+  #snake-demo
+    background-image: url('/images/demos/snake.svg')
+  #tabs-demo
+    background-image: url('/images/demos/tabs.svg')
+  #tic-tac-toe-demo
+    background-image: url('/images/demos/tic-tac-toe.svg')
 
-.project
-  float: left
-  width: 20%
-  padding: 10px
-  position: relative
-  @media (max-width: 1200px)
-    width: 25%
-  @media (max-width: 920px)
-    width: 33.333%
-  @media (max-width: 650px)
-    width: 50%
-  @media (max-width: 410px)
+  .project
+    float: left
+    padding: 10px
+    position: relative
+    width: 20%
+    @media (max-width: $large-size)
+      width: 25%
+    @media (max-width: $medium-size)
+      width: 33.333%
+    @media (max-width: 650px)
+      width: 50%
+    @media (max-width: $small-size)
+      width: 100%
+
+  .title
+    margin-bottom: 10px
+
+  .image-wrap
+    height: 200px
+    overflow: hidden
+    position: relative
+
+    &:hover
+      .links, .overlay
+        display: block
+
+  .project-image
+    height: 100%
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: 50% 50%
+    position: relative
+    text-align: center
     width: 100%
 
-.project .title
-  margin-bottom: 10px
+  .overlay
+    background-color: rgba(0, 0, 0, 0.6)
+    display: none
+    height: 100%
+    left: 0
+    top: 0
+    position: absolute
+    width: 100%
 
-.image-wrap
-  height: 200px
-  overflow: hidden
-  position: relative
-  &:hover
-    .links
-      display: block
-    .overlay
-      display: block
+  .links
+    display: none
+    left: 50%
+    position: absolute
+    top: 50%
+    transform: translate(-50%, -50%)
 
-.project-image
-  width: 100%
-  height: 100%
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: 50% 50%
-  position: relative
-  text-align: center
+  a
+    border-radius: 3px
+    background-color: rgba(255, 255, 255, 0.75)
+    color: $dark-gray
+    display: block
+    font-weight: bold
+    margin: 10px 0
+    padding: 6px 20px
+    position: relative
+    text-align: center
 
-.overlay
-  display: none
-  background-color: rgba(0, 0, 0, 0.6)
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-
-.links
-  display: none
-  position: absolute
-  top: 50%
-  left: 50%
-  margin: -59px 0 0 -62px
-
-.link
-  display: block
-  background-color: rgba(255, 255, 255, 0.75)
-  text-align: center
-  font-size: 0.7em
-  font-weight: bold
-  padding: 6px 0 2px 0
-  margin: 10px 0
-  width: 120px
-  border-radius: 3px
-  color: $dark-gray
-  position: relative
-
-  &:hover
-    text-decoration: none
-    background-color: lighten($accent, 20)
+    &:hover
+      background-color: lighten($accent, 20)
+      text-decoration: none
 
