--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -22,8 +22,8 @@ p
 h1, h2, h3, h4
   font-family: $title-font
   font-weight: $normal-weight
-  line-height: 1.25em
-  margin: 40px 0 20px
+  line-height: 1.25
+  margin: 60px 0 10px
 
 h1
   font-size: 2.5em
@@ -31,11 +31,14 @@ h1
     font-size: 2em
 
 h2
-  font-size: 1.5em
+  font-size: 2em
 
 h3
+  font-size: 1.5em
+
+h4
   font-size: 1em
-  margin: 20px 0 0
+  font-weight: $bold
 
 h1, h2, h3
   @include respond(small)
