--- a/source/contact-me/index.haml
+++ b/source/contact-me/index.haml
@@ -1,6 +1,6 @@
 %script(src="/js/validator.js")
 %h1 Hi there!
-%p Want to tell me something interesting? Are you looking for a JavaScript dev? Have a suggestion for me? I'd love to hear from you!
+%p Want to tell me something interesting? Have a suggestion for me? I'd love to hear from you!
 
 .contact
   :javascript
