--- a/source/stylesheets/_js-demos.sass
+++ b/source/stylesheets/_js-demos.sass
@@ -84,7 +84,7 @@
     background-color: rgba(255, 255, 255, 0.75)
     color: $dark-gray
     display: block
-    font-weight: bold
+    font-weight: $bold
     margin: 10px 0
     padding: 6px 20px
     position: relative
