--- a/source/blog/index.haml
+++ b/source/blog/index.haml
@@ -7,9 +7,9 @@ pageable: true
     - if prev_page
       %p= link_to 'Previous page', prev_page
 
-  - page_articles.each_with_index do |article, i|
+  - page_articles.each do |article|
     %div
-      %h2
+      %h1
         = link_to article.title, article
       %p= article.date.strftime('%b %e, %Y')
       = article.summary(250)
