--- a/source/blog/2014/02-27-Sublime-Auto-Indent.haml
+++ b/source/blog/2014/02-27-Sublime-Auto-Indent.haml
@@ -21,7 +21,7 @@ title: Sublime Auto Indent
   %li
     <code>"keys"</code> labels the next section as the keys that will trigger the action.
   %li
-    <code>["super+i"]</code> means "use whatever this computer defaults to" (<code>cmd</code> for macs, <code>ctrl</code> for windows) and <code>i</code> to trigger the action.
+    <code>["super+i"]</code> means “use whatever this computer defaults to” (<code>cmd</code> for macs, <code>ctrl</code> for windows) and <code>i</code> to trigger the action.
   %li
     <code>"command"</code> labels which command the given key binding should trigger.
   %li
