--- a/source/blog/2014/03-01-dont-work-on-master.haml
+++ b/source/blog/2014/03-01-dont-work-on-master.haml
@@ -3,4 +3,4 @@ title: Don't Work on Master
 published: false
 ---
 %p
-  I try not to work directly on the master branch for any repo. There’s invariably some last minute change you need to make the the live site, or a push you did wasn't quite as clean as you thought it was. If you've been committing to master, you'll have to go back through your recent comments, find where origin/master’s head is, and branch from there. It’s not a massive undertaking, but it takes time - if you're trying to fix a production bug "taking time" is the last thing you need.
+  I try not to work directly on the master branch for any repo. There’s invariably some last minute change you need to make the the live site, or a push you did wasn't quite as clean as you thought it was. If you've been committing to master, you'll have to go back through your recent comments, find where origin/master’s head is, and branch from there. It’s not a massive undertaking, but it takes time - if you're trying to fix a production bug “taking time” is the last thing you need.
