--- a/source/blog/2014/02-13-udacity-study-group.haml
+++ b/source/blog/2014/02-13-udacity-study-group.haml
@@ -18,22 +18,22 @@ tags: udacity, study group
     motivated attendees.
 
 %p
-  As I mentioned, there are copious "learn to program" resources, but I want something specific. It needs to be interactive (not just reading a book), provide explanations for every step (no copy/paste!), have sections that could be done alone and in a group (learn a little every day, not just on meeting days) and be free - I don't want anyone to feel like they can't attend because of money issues. There doesn't seem to be anything that meets all those requirements for learning Ruby (if you have any suggestions, please add them to the comments!).
+  As I mentioned, there are copious “learn to program” resources, but I want something specific. It needs to be interactive (not just reading a book), provide explanations for every step (no copy/paste!), have sections that could be done alone and in a group (learn a little every day, not just on meeting days) and be free - I don't want anyone to feel like they can't attend because of money issues. There doesn't seem to be anything that meets all those requirements for learning Ruby (if you have any suggestions, please add them to the comments!).
 
 %h2
   A focused lesson plan
 %p
-  I'd previously had experience working with the courses from #{link_to 'Udacity', 'https://www.udacity.com/'}. I loved the layout of the whole thing - very short videos, quizzes throughout the lecture to keep you focused, and problem sets at the end to do as "homework". This seems like a great way to run the study group - we could have a "flipped" classroom: watch the videos at home and do the homework as a group. For me, it also means I can brush up on my #{link_to 'Python', 'https://www.udacity.com/course/cs101'} - pretty happy to take a little break from Ruby in the evenings!
+  I'd previously had experience working with the courses from #{link_to 'Udacity', 'https://www.udacity.com/'}. I loved the layout of the whole thing - very short videos, quizzes throughout the lecture to keep you focused, and problem sets at the end to do as “homework”. This seems like a great way to run the study group - we could have a “flipped” classroom: watch the videos at home and do the homework as a group. For me, it also means I can brush up on my #{link_to 'Python', 'https://www.udacity.com/course/cs101'} - pretty happy to take a little break from Ruby in the evenings!
 
 %h2
   A clear end date
 %p
-  For me, starting new habits is quite daunting. The first time I do something all I can think is "do I really want to do this every day for the rest of my life?" I find it hard to deal with the repetition (monotony...) of it, even in my imagination. For this study group I don't want people to feel that they were promising to learn to programming forever. Nor do I want to lock myself in. There are many things that can go wrong with something like this, and I want to give everyone a date with an easy out. After that we can all reevaluate and decide if we're interested in continuing, or letting sleeping dogs lie.
+  For me, starting new habits is quite daunting. The first time I do something all I can think is “do I really want to do this every day for the rest of my life?” I find it hard to deal with the repetition (monotony...) of it, even in my imagination. For this study group I don't want people to feel that they were promising to learn to programming forever. Nor do I want to lock myself in. There are many things that can go wrong with something like this, and I want to give everyone a date with an easy out. After that we can all reevaluate and decide if we're interested in continuing, or letting sleeping dogs lie.
 
 %h2
   Concrete (and often) meeting times
 %p
-  I struggle to keep in touch with friends. When we say goodbye we often leave it with "see you... sometime!" and then never get around to setting a date. When one of us does remember, it takes ages to find a time that works well for both of us. I don't want to play that game for this group. I will pick one day a week to get together and go over the homework problems. If that doesn't work for you, I'm sorry. I also want to meet every week - not just once a month. It needs to be often enough that people feel the urgency to get their work done and not procrastinate. And often enough that they don't forget the concepts between meetings. It'd be great to meet twice a week, but that’s a bit out of range for me, and probably for any attendees as well.
+  I struggle to keep in touch with friends. When we say goodbye we often leave it with “see you... sometime!” and then never get around to setting a date. When one of us does remember, it takes ages to find a time that works well for both of us. I don't want to play that game for this group. I will pick one day a week to get together and go over the homework problems. If that doesn't work for you, I'm sorry. I also want to meet every week - not just once a month. It needs to be often enough that people feel the urgency to get their work done and not procrastinate. And often enough that they don't forget the concepts between meetings. It'd be great to meet twice a week, but that’s a bit out of range for me, and probably for any attendees as well.
 
 %h2
   Motivated Attendees
